modify thread api
modify thread api

--- a/project/Colibri190/Project.uvprojx
+++ b/project/Colibri190/Project.uvprojx
@@ -10,11 +10,12 @@
       <TargetName>TCL_GD32F190R8</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>5060300::V5.06 update 3 (build 300)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
           <Device>GD32F190R8</Device>
           <Vendor>GigaDevice</Vendor>
-          <PackID>GigaDevice.GD32F1x0_DFP.2.0.1</PackID>
+          <PackID>GigaDevice.GD32F1x0_DFP.3.0.0</PackID>
           <PackURL>http://gd32mcu.21ic.com/data/documents/yingyongruanjian/</PackURL>
           <Cpu>IROM(0x08000000,0x00010000) IRAM(0x20000000,0x00002000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -84,6 +85,8 @@
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
+            <nStopA1X>0</nStopA1X>
+            <nStopA2X>0</nStopA2X>
           </AfterMake>
           <SelectedForBatchBuild>0</SelectedForBatchBuild>
           <SVCSIdString></SVCSIdString>
@@ -122,47 +125,6 @@
             <HexOffset>0</HexOffset>
             <Oh166RecLen>16</Oh166RecLen>
           </OPTHX>
-          <Simulator>
-            <UseSimulator>0</UseSimulator>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>1</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <LimitSpeedToRealTime>0</LimitSpeedToRealTime>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Simulator>
-          <Target>
-            <UseTarget>1</UseTarget>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>0</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <RestoreTracepoints>1</RestoreTracepoints>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Target>
-          <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>12</TargetSelection>
-          <SimDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-          </SimDlls>
-          <TargetDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-            <Driver>BIN\CMSIS_AGDI.dll</Driver>
-          </TargetDlls>
         </DebugOption>
         <Utilities>
           <Flash1>
@@ -227,6 +189,7 @@
             <useUlib>1</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
+            <nSecure>0</nSecure>
             <RoSelD>3</RoSelD>
             <RwSelD>3</RwSelD>
             <CodeSel>0</CodeSel>
@@ -361,11 +324,18 @@
             <uSurpInc>0</uSurpInc>
             <uC99>0</uC99>
             <useXO>0</useXO>
+            <v6Lang>1</v6Lang>
+            <v6LangP>1</v6LangP>
+            <vShortEn>1</vShortEn>
+            <vShortWch>1</vShortWch>
+            <v6Lto>0</v6Lto>
+            <v6WtE>0</v6WtE>
+            <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>USE_STDPERIPH_DRIVER,GD32F170_190</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\CMSIS;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\CMSIS\GD\GD32F1x0\Include;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\GD32F1x0_standard_peripheral\Include;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\Peripherals\include;..\..\board\Colibri190;..\..\trochili\inc;..\..\trochili\inc\cpu;..\..\trochili\inc\ipc;..\..\trochili\inc\lib;..\..\trochili\inc\mem;..\..\example;C:\Keil_v5\ARM\Pack\ARM\CMSIS\4.2.0\CMSIS\Include</IncludePath>
+              <IncludePath>..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\CMSIS;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\CMSIS\GD\GD32F1x0\Include;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\GD32F1x0_standard_peripheral\Include;..\..\firmware\GD32F1x0_Firmware_Library_V3.0.0\Firmware\Peripherals\include;..\..\board\Colibri190;..\..\trochili\inc;..\..\trochili\inc\cpu;..\..\trochili\inc\ipc;..\..\trochili\inc\lib;..\..\trochili\inc\mem;..\..\example;C:\Keil_v5\ARM\Pack\ARM\CMSIS\4.5.0\CMSIS\Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -378,6 +348,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
+            <uClangAs>0</uClangAs>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
